# physics-rs

./: Cargo.toml  README.md
docs/: fast-mass-spring.md
fast_mass_spring/: Cargo.toml
fast_mass_spring/src/: cloth.rs  lib.rs  math.rs  solver.rs
simulation/: Cargo.toml
simulation/src/: collision.rs  fixed_frame.rs  fps_counter.rs  lib.rs  math.rs  mesh.rs
visual-examples/: Cargo.toml
visual-examples/src/: common.rs  entry.rs  gui.rs  main.rs  render.rs
visual-examples/src/entry/: drop_cloth_demo.rs  hang_cloth_demo.rs
visual-examples/src/shaders/: triangle.frag  triangle.vert  wireframe.vert
