[package]
name = "fast-mass-spring"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_mass_spring"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { workspace = true }
simulation = { path = "../simulation" }
